# stewardauth

./: .gitignore  README.md  README.ru.md  README.zh.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
packaging/homebrew-tap/: README.md
packaging/homebrew-tap/Casks/: stewardauth.rb
src/: App.css  App.tsx  api.ts  main.tsx  theme.ts  types.ts  updater.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  settings.rs  tray.rs  watch.rs
src-tauri/src/steam/: auto_confirm.rs  confirmations.rs  link.rs  login_approve.rs  mod.rs  proxy.rs  session.rs  session_store.rs  time.rs  totp.rs
src-tauri/src/vault/: data_location.rs  encryption.rs  export.rs  import.rs  keychain.rs  mafile.rs  mafiles.rs  mod.rs  model.rs  sda_crypto.rs  sda_manifest.rs  store.rs
src-tauri/tests/fixtures/: sample.maFile
src-tauri/tests/fixtures/sda/: 1234.maFile  manifest.json
src/components/: AccountContextMenu.tsx  AccountList.tsx  AccountMenu.tsx  AddAuthenticatorWizard.tsx  ConfirmLogin.tsx  Confirmations.tsx  GroupsDropdown.tsx  ImportDialog.tsx  ImportFeedback.tsx  MenuDropdown.tsx  ProxyManager.tsx  ReadyView.tsx  Settings.tsx  StatusBar.tsx  Toolbar.tsx  UnlockScreen.tsx  UpdateModal.css  UpdateModal.tsx  icons.tsx
src/hooks/: useCode.ts  useImportPaths.ts  useUpdater.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  es.json  fr.json  kk.json  ru.json  tr.json  uk.json  zh.json
